// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldFactory Creates a checkbox fieldset 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-1"
      >
        One
      </label>
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-1"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-1"
      >
        One
      </label>
    </div>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-2"
      >
        Two
      </label>
      <input
        aria-describedby="opt-2__help"
        checked={true}
        className="components-checkbox-control__input"
        id="opt-2"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-2"
      >
        Two
      </label>
    </div>
    <p
      className="components-base-control__help"
      id="opt-2__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-3"
      >
        Three
      </label>
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-3"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-3"
      >
        Three
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates a number field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="numberFieldId"
    >
      Number Field Label
    </label>
    <input
      aria-describedby="numberFieldId__help"
      className="components-text-control__input"
      id="numberFieldId"
      max={10}
      min={1}
      onBlur={[Function]}
      onChange={[MockFunction]}
      type="number"
      value={3}
    />
  </div>
  <p
    className="components-base-control__help"
    id="numberFieldId__help"
  >
    Number field description
  </p>
</div>
`;

exports[`fieldFactory Creates a radio field 1`] = `
<div
  className="components-base-control components-radio-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="radioFieldLabel"
    >
      Radio Field Label
    </label>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="radioFieldLabel__help"
        checked={false}
        className="components-radio-control__input"
        id="radioFieldLabel-0"
        name="radioFieldLabel"
        onChange={[Function]}
        type="radio"
        value={0}
      />
      <label
        htmlFor="radioFieldLabel-0"
      >
        Zero
      </label>
    </div>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="radioFieldLabel__help"
        checked={true}
        className="components-radio-control__input"
        id="radioFieldLabel-1"
        name="radioFieldLabel"
        onChange={[Function]}
        type="radio"
        value={1}
      />
      <label
        htmlFor="radioFieldLabel-1"
      >
        One
      </label>
    </div>
    <div
      className="components-radio-control__option"
    >
      <input
        aria-describedby="radioFieldLabel__help"
        checked={false}
        className="components-radio-control__input"
        id="radioFieldLabel-2"
        name="radioFieldLabel"
        onChange={[Function]}
        type="radio"
        value={2}
      />
      <label
        htmlFor="radioFieldLabel-2"
      >
        Two
      </label>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="radioFieldLabel__help"
  >
    Radio field description
  </p>
</div>
`;

exports[`fieldFactory Creates a submit button 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <input
      disabled={false}
      id="clickButton"
      type="submit"
      value="Click Me"
    />
  </div>
  <p
    className="components-base-control__help"
    id="clickButton__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates a text field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="firstName"
    >
      First Name
    </label>
    <input
      aria-describedby="firstName__help"
      className="components-text-control__input"
      id="firstName"
      onBlur={[Function]}
      onChange={[MockFunction]}
      type="text"
      value="roy"
    />
  </div>
  <p
    className="components-base-control__help"
    id="firstName__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an autocomplete field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <input
      className="caldera-field caldera-field-autocomplete"
      id="autoComplete1"
      onChange={[Function]}
      suggestions={
        Array [
          "One",
          "Two",
          "Three",
        ]
      }
      value={
        Array [
          "One",
          "Three",
        ]
      }
    />
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="checkboxFieldLabel"
    >
      Checkbox Labe
    </label>
    <input
      aria-describedby="checkboxFieldLabel__help"
      checked={true}
      className="components-checkbox-control__input"
      id="checkboxFieldLabel"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      className="components-checkbox-control__label"
      htmlFor="checkboxFieldLabel"
    >
      Checkbox Labe
    </label>
  </div>
  <p
    className="components-base-control__help"
    id="checkboxFieldLabel__help"
  >
    Checkbox field description
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field set 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-1"
      >
        One
      </label>
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-1"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-1"
      >
        One
      </label>
    </div>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-2"
      >
        Two
      </label>
      <input
        aria-describedby="opt-2__help"
        checked={true}
        className="components-checkbox-control__input"
        id="opt-2"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-2"
      >
        Two
      </label>
    </div>
    <p
      className="components-base-control__help"
      id="opt-2__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="opt-3"
      >
        Three
      </label>
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="opt-3"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="components-checkbox-control__label"
        htmlFor="opt-3"
      >
        Three
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates an email field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="emailFieldId"
    >
      Email Field Label
    </label>
    <input
      aria-describedby="emailFieldId__help"
      className="components-text-control__input"
      id="emailFieldId"
      multiple={true}
      onBlur={[Function]}
      onChange={[MockFunction]}
      type="email"
      value="emai@email.com"
    />
  </div>
  <p
    className="components-base-control__help"
    id="emailFieldId__help"
  >
    Email field description
  </p>
</div>
`;

exports[`fieldFactory Creates an fields-autocomplete field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="firstName"
    >
      First Name
    </label>
    <input
      className="caldera-field caldera-field-autocomplete"
      id="firstName"
      onChange={[Function]}
      suggestions={
        Array [
          "%firstName%",
          "First Name",
          "%textArea1%",
          "Your message",
        ]
      }
      value="roy"
    />
  </div>
  <p
    className="components-base-control__help"
    id="firstName__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an select field 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="selectFieldId"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory Creates an select field identified as dropdown 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="selectFieldId"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="components-select-control__input"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
  </div>
  <p
    className="components-base-control__help"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory should create textarea 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="textArea1"
    >
      Your message
    </label>
    <textarea
      aria-describedby="textArea1__help"
      className="components-textarea-control__input"
      cols={8}
      id="textArea1"
      maxLength={500}
      minlength={10}
      onBlur={[Function]}
      onChange={[Function]}
      required={true}
      rows={5}
      value="The content of text area"
    />
  </div>
  <p
    className="components-base-control__help"
    id="textArea1__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory should create toggle 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="toggleFieldLabel"
    >
      Toggle Label
    </label>
    <div
      className="components-base-control components-toggle-control"
    >
      <div
        className="components-base-control__field"
      >
        <span
          className="components-form-toggle is-checked"
        >
          <input
            checked={true}
            className="components-form-toggle__input"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="components-form-toggle__track"
          />
          <span
            className="components-form-toggle__thumb"
          />
          <svg
            aria-hidden="true"
            className="components-form-toggle__on"
            focusable="false"
            height="6"
            role="img"
            viewBox="0 0 2 6"
            width="2"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h2v6H0z"
            />
          </svg>
        </span>
        <label
          className="components-toggle-control__label"
        />
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="toggleFieldLabel__help"
  >
    Toggle field description
  </p>
</div>
`;
